--- a/css/gift.css
+++ b/css/gift.css
@@ -2,20 +2,26 @@
 
 * {
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 html {
   font-size: 24px;
   font-family: oswald;
+
   margin: 0;
   padding: 0;
   height: 100%;
 }
 
+
 body {
+
   margin: 0;
   padding: 0;
   max-height: 100%;
+
 }
 
 article {
@@ -31,26 +37,37 @@ article {
   max-width: 100%;
   background: linear-gradient(180deg, #FDFCFB 0%, #E2D1C3 100%);
   overflow-x: hidden;
+
+  bottom: 0px;
+  /* 嘗试移除这个bottom属性 */
   min-height: 100vh;
   padding-top: 88px;
 }
 
+.container-background {
+  background-image: url(../images/cover.png);
+  background-size: 110%;
+  background-color: #fde4d0;
+  background-position-y: 80px;
+  background-repeat: no-repeat;
+}
+
 header {
+
   height: 700px;
   width: 100%;
+
+
 }
 
 .menu {
   background-color: #FE9858;
-  padding: 0 5px 0 16px;
+  padding: 0px 5px 0px 16px;
   height: 88px;
   width: 100%;
   position: fixed;
-  top: 0;
+  top: 0px;
   z-index: 20;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .menu.scrolled {
@@ -60,20 +77,130 @@ header {
   /* 添加模糊效果 */
 }
 
+
+
 .menu h1 {
   float: left;
 }
 
-.menu h1 a {
+
+.menu ul li {
+  float: right;
+}
+
+.menu ul li a {
+  font-size: 20px;
   display: block;
-  background-image: url(https://images2.imgbox.com/96/0c/G1gO1j7e_o.png);
-  width: 229px;
+  font-weight: 600;
+
+  width: 148px;
+  height: 59px;
+  line-height: 29px;
+
+  margin: 16px 13px 16px 5px;
+  padding: 15px 0px;
+  color: #8C6C57;
+  background-color: #FFF;
+
+  text-decoration: none;
+  text-align: center;
+
+  border: 5px solid transparent;
+  /* 初始狀態下邊框透明 */
+  transition: border 0.3s ease;
+  /* 增加邊框過渡效果 */
+}
+
+.menu ul {
+  display: flex;
+  justify-content: flex-end;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu ul li a:hover {
+  border: 5px solid #7B5F49;
+  /* 設置咖啡色邊框 */
+
+}
+
+.icon {
+  display: none;
+  padding: 20px 5% 0 40%;
+
+  font-size: 24px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.menu.scrolled {
+  background-color: rgba(254, 152, 88, 0.8);
+  /* 变成更透明 */
+  backdrop-filter: blur(10px);
+  /* 添加模糊效果 */
+}
+
+
+
+.menu h1 {
+  float: left;
+}
+
+/*
+.menu ul li {
+    float: right;
+}
+*/
+.menu ul li a {
+  font-size: 20px;
+  display: block;
+  font-weight: 600;
+
+  width: 130px;
+  height: 50px;
+  line-height: 29px;
+
+  margin: 10px 13px 16px 5px;
+  padding: 10px 0px;
+  color: #8C6C57;
+  background-color: #FFF;
+
+  text-decoration: none;
+  text-align: center;
+
+  border: 5px solid transparent;
+  /* 初始狀態下邊框透明 */
+  transition: border 0.3s ease;
+  /* 增加邊框過渡效果 */
+}
+
+/*
+.menu ul {
+    display: flex;
+    justify-content: flex-end;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+*/
+.menu ul li a:hover {
+  border: 5px solid #7B5F49;
+  /* 設置咖啡色邊框 */
+
+}
+
+.menu {
+  background-color: #FE9858;
+  padding: 0px 5px 0px 16px;
   height: 88px;
-  background-position: center center;
-  background-repeat: no-repeat;
-  text-indent: 101%;
-  white-space: nowrap;
-  overflow: hidden;
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  z-index: 20;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .menu ul {
@@ -88,39 +215,267 @@ header {
   margin-left: 3px;
 }
 
-.menu ul li a {
-  font-size: 20px;
-  display: block;
-  font-weight: 600;
-  width: 130px;
-  height: 50px;
-  line-height: 29px;
-  margin: 10px 13px 16px 5px;
-  padding: 10px 0;
-  color: #8C6C57;
-  background-color: #FFF;
-  text-decoration: none;
-  text-align: center;
-  border: 5px solid transparent;
-  /* 初始狀態下邊框透明 */
-  transition: border 0.3s ease;
-  /* 增加邊框過渡效果 */
-}
-
-.menu ul li a:hover {
-  border: 5px solid #7B5F49;
-  /* 設置咖啡色邊框 */
-}
-
 .icon {
   display: none;
-  /* Consider adding media queries for responsiveness */
   font-size: 36px;
   cursor: pointer;
   color: #FFF;
-  padding: 20px 5% 0 40%;
 }
 
+@media (max-width: 900px) {
+  .menu ul {
+    /*
+              display: none;
+              flex-direction: column;
+              position: absolute;
+              right: 0;
+              top: 90px;
+              background-color: #fff;
+              width: 200px;
+              text-align: right;
+        height:100vh;
+        */
+    width: 200px;
+    height: calc(100vh - 88px);
+    /* 使菜单栏占据导航栏下方的整个网页高度 */
+    position: fixed;
+    right: 0;
+    top: 88px;
+    /* 从导航栏底部开始 */
+    background-color: #fff;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    /* 从上方开始显示菜单项 */
+    display: none;
+    z-index: 10;
+  }
+
+  .menu ul.show {
+    display: flex;
+  }
+
+  .menu ul li {
+    margin: 10px 0;
+  }
+
+  .icon {
+    display: block;
+  }
+}
+
+@media (max-width: 480px) {
+  .menu ul {
+    /*
+              display: none;
+              flex-direction: column;
+              position: absolute;
+              right: 0;
+              top: 90px;
+              background-color: #fff;
+              width: 200px;
+              text-align: right;
+        height:100vh;
+        */
+    width: 100%;
+    height: calc(100vh - 88px);
+    /* 使菜单栏占据导航栏下方的整个网页高度 */
+    position: fixed;
+    right: 0;
+    top: 88px;
+    /* 从导航栏底部开始 */
+    background-color: #fff;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    /* 从上方开始显示菜单项 */
+    display: none;
+    z-index: 10;
+  }
+
+  .menu ul.show {
+    display: flex;
+  }
+
+  .menu ul li {
+    margin: 10px 0;
+  }
+
+  .icon {
+    display: block;
+  }
+
+}
+.menu.scrolled {
+  background-color: rgba(254, 152, 88, 0.8); /* 变成更透明 */
+  backdrop-filter: blur(10px); /* 添加模糊效果 */
+}
+
+
+
+.menu h1{
+ float:left;
+}
+
+
+.menu h1 a img {
+    width: 160px;
+    height: 30px; /* 等比例缩放 */
+    background:cover;
+
+   
+}
+/*
+.menu ul li {
+    float: right;
+}
+*/
+.menu ul li a {
+    font-size: 18px;
+    display: block;
+    font-weight: 600;
+
+    width: 130px;
+    height: 40px;
+    line-height: 29px;
+
+    margin: 16px 13px 16px 5px;
+    padding: 4px 0px;
+    color: #8C6C57;
+    background-color: #FFF;
+
+    text-decoration: none;
+   
+
+    border: 5px solid transparent; /* 初始狀態下邊框透明 */
+    transition: border 0.3s ease; /* 增加邊框過渡效果 */
+}
+/*
+.menu ul {
+    display: flex;
+    justify-content: flex-end;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+*/
+.menu ul li a:hover {
+    border: 5px solid #7B5F49; /* 設置咖啡色邊框 */
+   
+}
+.menu {
+    background-color: #FE9858;
+    padding: 0px 5px 0px 16px;
+    height: 60px;
+    width: 100%;
+    position: fixed;
+    top: 0px;
+    z-index: 20;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu ul {
+    display: flex;
+    justify-content: flex-end;
+    list-style-type: none;
+    margin: 0;
+    padding: 10px 0;
+}
+
+.menu ul li {
+    margin-left: 3px;
+}
+
+.icon {
+    display: none;
+    font-size: 36px;
+    cursor: pointer;
+    color: #FFF;
+}
+
+@media (max-width: 900px) {
+    .menu ul {
+  /*
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        right: 0;
+        top: 90px;
+        background-color: #fff;
+        width: 200px;
+        text-align: right;
+  height:100vh;
+  */
+  width: 200px;
+        height: calc(100vh - 88px); /* 使菜单栏占据导航栏下方的整个网页高度 */
+        position: fixed;
+        right: 0;
+        top: 88px; /* 从导航栏底部开始 */
+        background-color: #fff;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start; /* 从上方开始显示菜单项 */
+        display: none;
+        z-index: 10;
+    }
+
+    .menu ul.show {
+        display: flex;
+    }
+
+    .menu ul li {
+        margin: 10px 0;
+    }
+
+    .icon {
+        display: block;
+    }
+}
+
+@media (max-width: 480px) {
+    .menu ul {
+  /*
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        right: 0;
+        top: 90px;
+        background-color: #fff;
+        width: 200px;
+        text-align: right;
+  height:100vh;
+  */
+  width: 100%;
+        height: calc(100vh - 88px); /* 使菜单栏占据导航栏下方的整个网页高度 */
+        position: fixed;
+        right: 0;
+        top: 88px; /* 从导航栏底部开始 */
+        background-color: #fff;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start; /* 从上方开始显示菜单项 */
+        display: none;
+        z-index: 10;
+    }
+
+    .menu ul.show {
+        display: flex;
+    }
+
+    .menu ul li {
+        margin: 10px 0;
+    }
+
+    .icon {
+        display: block;
+    }
+    .menu{
+        height:40px;
+    }
+
+}
 #loadingPage {
   margin: 0 auto;
   color: #7B5F49;
