--- a/css/loading.css
+++ b/css/loading.css
@@ -423,7 +423,8 @@ header {
     }
 
     .icon {
-        display: block;
+      display: block;
+       padding:7px 5% 0 40%;
     }
 }
 
@@ -463,6 +464,7 @@ header {
 
     .icon {
         display: block;
+       padding:7px 5% 0 40%;
     }
     .menu{
         height:40px;
