--- a/css/gift.css
+++ b/css/gift.css
@@ -431,6 +431,7 @@ header {
 
     .icon {
         display: block;
+       padding:7px 5% 0 40%;
     }
 }
 
@@ -470,6 +471,7 @@ header {
 
     .icon {
         display: block;
+       padding:7px 5% 0 40%;
     }
     .menu{
         height:40px;
