--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,7 @@ header {
         text-align: right;
   height:100vh;
   */
-  width: 100%;
+         width: 100%;
         height: calc(100vh - 88px); /* 使菜单栏占据导航栏下方的整个网页高度 */
         position: fixed;
         right: 0;
@@ -459,6 +459,7 @@ header {
         justify-content: flex-start; /* 从上方开始显示菜单项 */
         display: none;
         z-index: 10;
+        margin-top: -47px; /* 根据需要调整负值 */
     }
 
     .menu ul.show {
