--- a/css/gift.css
+++ b/css/gift.css
@@ -437,17 +437,7 @@ header {
 
 @media (max-width: 480px) {
     .menu ul {
-  /*
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        right: 0;
-        top: 90px;
-        background-color: #fff;
-        width: 200px;
-        text-align: right;
-  height:100vh;
-  */
+ 
   width: 100%;
         height: calc(100vh - 88px); /* 使菜单栏占据导航栏下方的整个网页高度 */
         position: fixed;
@@ -459,6 +449,7 @@ header {
         justify-content: flex-start; /* 从上方开始显示菜单项 */
         display: none;
         z-index: 10;
+        margin-top: -47px; /* 根据需要调整负值 */
     }
 
     .menu ul.show {
